# ssbl-cuda-xpbd

./: .gitignore  README.md  __init__.py  blender_manifest.toml  cache_names.py  collision.py  force_fields.py  native_backend.py  operators.py  parameters.md  session_manager.py  solver.py  solver_architecture.md  ui.py  xpbd_core.py
native/: CMakeLists.txt  README.md  build.ps1  build_abi41.ps1  check_toolchain.ps1
native/build_candidate/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ssbl_xpbd_cuda.sln  ssbl_xpbd_cuda.vcxproj  ssbl_xpbd_cuda.vcxproj.filters
native/build_candidate/ssbl_xpbd_cuda.dir/Release/: ssbl_xpbd_cuda.cu-632619015.deps  ssbl_xpbd_cuda_abi36_candidate.dll.recipe
native/build_candidate/ssbl_xpbd_cuda.dir/Release/ssbl_xpbd_cuda.tlog/: CudaCompile.read.1u.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  ssbl_xpbd_cuda.lastbuildstate
native/build_candidate/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build_candidate/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
native/build_candidate/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_candidate/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
native/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ssbl_xpbd_cuda.sln  ssbl_xpbd_cuda.vcxproj  ssbl_xpbd_cuda.vcxproj.filters
native/build_test/ssbl_xpbd_cuda.dir/Release/: ssbl_xpbd_cuda.cu.cache  ssbl_xpbd_cuda_abi36_test.dll.recipe
native/build_test/ssbl_xpbd_cuda.dir/Release/ssbl_xpbd_cuda.tlog/: CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build_test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/include/: ssbl_abi41_cuda_types.cuh  ssbl_xpbd_cuda.h
native/smoke/: abi41_smoke.cpp
native/src/: ssbl_xpbd_cuda.cu  ssbl_xpbd_cuda_abi41.cu
tools/: _tmp_export_demo_blends.py  abi41_self_collision_smoke.py  animated_inputs_smoke.py  bake_volume_pressure_smoke.py  benchmark_10k_self_collision.py  benchmark_scene_monkey.py  benchmark_startup_cache.py  benchmark_suzanne_perf.py  benchmark_v2_multicloth.py  check_monkey_self_intersections.py  cloth_monkey_blocks_sphere_smoke.py  compare_hook_wring_to_manual.py  compare_volume_pressure.py  create_wring_towel_current_scene.py  cs2_fast_quality_gate.py  cs2_multicloth_perf_probe.py  cs2_performance_bench.py  cs2_self_collision_intersection_regression.py  cs2_timeline_perf_probe.py  demo03_live_perf_probe.py  diagnose_scene_collision.py  diagnose_wring_current_scene.py  diagnose_wring_self_penetration.py  evaluated_cloth_topology_guard_smoke.py  force_field_smoke.py  inspect_cs2_collision_state.py  interactive_pin_smoke.py  mcp_alt_modal_validation.py  mcp_record_monkey_test.py  multicloth_contact_record.py  multicloth_contact_stability_smoke.py  multicloth_particle_contact_smoke.py  multicloth_writeback_smoke.py  native_contact_group_probe.py  object_collision_smoke.py  pin_weight_classification_smoke.py  playback_preview_smoke.py  preview_restart_smoke.py  probe_desktop_demo05_friction.py  probe_scene_static_collision.py  (+24 more)
translation/: __init__.py  zh_CN.py
